--- a/practise_project/composer.json
+++ b/practise_project/composer.json
@@ -27,7 +27,9 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "HelloWorld\\":"HelloWorld/src/"
+            
         }
     },
     "scripts": {
